--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 dash-bootstrap-components==1.6.0
-gunicorn
+gunicorn==23.0.0
